2008-12-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-dir.cc:
	* src/intviewer/image-render.cc:
	* src/intviewer/text-render.cc:
	Replaced obsoleted gtk_object_unref() with g_object_unref()

	* pixmaps/Makefile.am:
	* src/imageloader.cc:
	* src/imageloader.h:
	Removal of forgotten parent-dir icon

	* src/gnome-cmd-advrename-dialog.cc:
	advrename: fix for bug disabling buttons after profile loading

2008-12-07  Piotr Eljasiak  <epiotr@use.pl>

	* po/POTFILES.in:
	* src/gnome-cmd-advrename-dialog.cc:
	* src/dialogs/Makefile.am:
	* src/dialogs/gnome-cmd-advrename-profiles-dialog.cc:
	* src/dialogs/gnome-cmd-advrename-profiles-dialog.h:
	advrename: addded dialog for managing profiles

2008-12-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	advrename: update file list after loading of the saved profile

2008-12-06  Mamoru Tasaka  <mtasaka@ioa.s.u-tokyo.ac.jp>

	* configure.in: Build fix for libtool-2.2

2008-12-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-dialog.h:
	advrename: 'Profiles...' button for loading saved settings

	* src/gnome-cmd-xml-config.cc:
	* src/gnome-cmd-xml-config.cc:
	Added gnome_cmd_xml_config_parse() function

2008-11-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-xml-config.cc:
	Added AdvrenameConfig::fill_regex_model(Profile &)

2008-11-27  Piotr Eljasiak  <epiotr@use.pl>

	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-xml-config.cc:
	* src/gnome-cmd-xml-config.h:
	Use XML cfg for storing advrename settings

2008-11-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-patternsel-dialog.cc:
	* src/gnome-cmd-search-dialog.cc: